# jarvis-v2

./: .env.example  .env.fathom  .gitignore  CLAUDE.md  CRAWL4AI.md  Dockerfile  docker-compose.yml  jarvis-api.service  jarvis-bot.service  jarvis-worker.service  oauth_server.py  pyproject.toml  requirements.txt
docs/plans/: 2026-02-14-jarvis-proactivity-multistep-design.md  2026-02-14-jarvis-proactivity-multistep-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  router.tsx
frontend/src/hooks/: use-auth.ts  use-calendar.ts  use-chat-history.ts  use-chat.ts  use-costs.ts  use-emails.ts  use-llm-stats.ts  use-memory.ts  use-rag-sources.ts  use-settings.ts  use-system-health.ts  use-task-queue.ts  use-tasks.ts  use-waitlist.ts
frontend/src/lib/: auth.ts
frontend/src/pages/: CalendarPage.tsx  ChatPage.tsx  CostsPage.tsx  DashboardPage.tsx  EmailPage.tsx  KnowledgePage.tsx  SettingsPage.tsx  TasksPage.tsx
frontend/src/styles/: animations.css  globals.css
scripts/: fix_rag_hybrid_function.sql  init_db.py  migration_kg_v1.sql  migration_kg_v1_fix_embedding.sql  migration_rag_v2.sql  migration_v2.sql  setup_google_oauth.py
sql/: 001_user_migration.sql  002_integration_oauth_tables.sql
src/: main.py
src/agents/: __init__.py  base.py
src/jarvis/: AGENTS.md  __init__.py  config.py  main.py
src/jarvis/agents/: __init__.py  base.py  calendar_agent.py  email_agent.py  kg_agent.py  rag_agent.py  task_agent.py  web_agent.py
src/jarvis/api/: __init__.py  __main__.py  server.py
src/jarvis/core/: __init__.py  freshness.py  kg_extractor.py  kg_types.py  knowledge_graph.py  memory.py  orchestrator.py  planner.py  router.py  state.py  user_resolver.py
src/jarvis/db/: __init__.py  kg_repository.py  redis_client.py  repositories.py  supabase_client.py
src/jarvis/integrations/: __init__.py  apify_google.py  crawl4ai_client.py  deepgram_stt.py  deepgram_tts.py  gemini.py  gmail.py  google_calendar.py  notion.py  openai_embeddings.py  openai_whisper.py  perplexity.py  reranker.py  soniox_stt.py
src/jarvis/interfaces/: __init__.py  telegram_bot.py
src/jarvis/rag/: __init__.py  chunker.py  hybrid_search.py  ingestion.py
src/jarvis/utils/: __init__.py  formatting.py  llm_logger.py  logging.py  pricing.py
src/jarvis/voice/: __init__.py  __main__.py  api_client.py  audio_capture.py  audio_player.py  ptt.py  sounds.py  vad.py  voice_loop.py  wake_word.py
src/jarvis/worker/: __init__.py  __main__.py  executor.py  main.py  notifier.py
supabase/: config.toml
supabase/functions/_shared/: supabase.ts
supabase/functions/fathom-oauth-authorize/: index.ts
supabase/functions/fathom-oauth-callback/: index.ts
supabase/functions/gcal-oauth-authorize/: index.ts
supabase/functions/gcal-oauth-callback/: index.ts
supabase/functions/gmail-oauth-authorize/: index.ts
supabase/functions/gmail-oauth-callback/: index.ts
supabase/functions/notion-oauth-authorize/: index.ts
supabase/functions/notion-oauth-callback/: index.ts
supabase/functions/notion-webhook/: index.ts
supabase/migrations/: 20260214092654_auth_and_orgs.sql
tests/: test_knowledge_graph.py  test_orchestrator.py  test_router.py
(+53 files in other folders)
